test/spec_vectors/i32/fail/module_74.wat
(module (func (result i32) (i32.eq (i64.const 0) (f32.const 0))))